fix: professional description white space

--- a/src/app/professional/pages/professional-page/professional-page.component.scss
+++ b/src/app/professional/pages/professional-page/professional-page.component.scss
@@ -20,3 +20,7 @@
 .pl5 {
   padding-left: 5px;
 }
+.desc-ws {
+  white-space: pre-wrap;
+  padding-top: 0.25rem;
+}
